force-app/main/default/objects/Document_Type__c/Document_Type__c.object-meta.xml
<CustomObject>
    <label>Document Type</label>
    <nameField>
        <label>Document Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>