force-app/main/default/objects/Document_Type__c/fields/Has_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Has_Expiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Expiry</label>
    <type>Checkbox</type>
</CustomField>