force-app/main/default/objects/Document_Type__c/fields/Is_Issuer_Specific__c.field-meta.xml
<CustomField>
    <fullName>Is_Issuer_Specific__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Issuer Specific</label>
    <type>Checkbox</type>
</CustomField>