force-app/main/default/objects/Document_Type__c/fields/Translation_Required__c.field-meta.xml
<CustomField>
    <fullName>Translation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Translation Required</label>
    <type>Checkbox</type>
</CustomField>