force-app/main/default/objects/Document_Type__c/fields/Typical_Validity_Days__c.field-meta.xml
<CustomField>
    <fullName>Typical_Validity_Days__c</fullName>
    <label>Typical Validity (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>